# cSnake

./: CMakeLists.txt  README.md  csnake.cpp  resource.rc
.github/workflows/: build-and-release.yml
